--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@google/generative-ai": "^0.24.0",
+    "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "next": "15.3.1",
     "react": "^19.0.0",
